# zensep

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  conanfile.py  index.md  run.zsh  zensep.code-workspace
docs/: README.md
docs/vs_code_extension/: README.md
src/: main.cpp  version.h  zensep.cpp  zensep.h
src/format/: Formatter.cpp  Formatter.hpp  orchestrator.cpp  orchestrator.hpp
src/parse/: Parser.cpp  Parser.hpp  Parsers.cpp  Parsers.hpp
src/test/: test_atomics.cpp  test_fixtures.cpp  test_fixtures.hpp  test_integrations.cpp  test_runner.cpp  test_runner.hpp
vs_code_extension/: .gitignore  README.md  build.zsh  extension.code-workspace  init_tool_chain.zsh  package-lock.json  package.json  run.zsh
vs_code_extension/src/: extension.ts
